Compile only Java 9 specific classes for Java 9+ and not everything